top header visible in place but the title needs fixing

--- a/css/gettingStarted-styles.css
+++ b/css/gettingStarted-styles.css
@@ -12,7 +12,7 @@
 
 
 .gettingStartedCodeBlock1 {
-    margin:auto;
+    margin: 20px auto;
     width: auto;
  }
  .gettingStartedCodeBlock1 .coderBlock {
