--- a/css/styles.css
+++ b/css/styles.css
@@ -22,9 +22,11 @@
     --accent1Color: #4B304F;
     --accent2Color: #E0DA62;
     --folderColor: #57B3A1;
+
+
 }
 
-
+@media (min-width:1154px) {
 body {
     font-family: omnes-cyrillic, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 24px;
@@ -33,6 +35,18 @@ body {
     grid-template-columns: 300px auto;
     grid-template-rows: 100%;
     grid-template-areas: "sideMenuContainer contentContainer";
+    
+
+
+}
+.topMenuContainer {
+    height: 0;
+    visibility: collapse;
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
     
 }
 p span .file {
@@ -91,9 +105,9 @@ li a, p a {
 }
 .contentContainer {
     grid-area: contentContainer;
-    overflow-y: auto;
+    overflow-y: scroll;
     height: 1000px;
-
+    width: 100%;
     margin: 0px auto 0px auto;
 }
 .header {
@@ -124,10 +138,10 @@ li a, p a {
     
    
     margin: 0px;
-    width: 45%;
+    width: auto;
     z-index: 0;
     text-align: center;
-    margin-left: 0px;
+    
     
     opacity: .5;
     
@@ -142,10 +156,10 @@ li a, p a {
     font-style: normal;
     letter-spacing: 90px; */
     margin: 0px;
-    width: 40%;
+    width: auto;
     z-index: 0;
     text-align: center;
-    margin-left: 0px;
+    
     
     opacity: .5;
 }
@@ -157,7 +171,7 @@ li a, p a {
     font-size: 100px;
     font-weight: 500;
     font-style: normal;
-    margin-top: -100px;
+    margin: -100px auto;
 }
 .siteLogoContainer {
     height: 10px;
